<resources>
    <string name="app_name">体温管理アプリ</string>
    <!--  アクション  -->
    <string name="ok">OK</string>
    <string name="close">閉じる</string>
    <string name="cancel">キャンセル</string>
    <string name="next">次へ</string>
    <string name="back">戻る</string>
    <string name="skip">今はしない</string>
    <string name="modify">修正する</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="save">保存</string>
    <string name="settings">設定</string>

    <!--  名詞  -->
    <string name="makelist_edit_name">名前</string>
    <string name="name">名前</string>

    <!--  エラー  -->
    <string name="message_illegal_input">入力が不正です</string>

    <!--  警告  -->
    <string name="delete_confirm">選択した項目を削除してもよろしいですか？</string>

    <!--  フォーマット  -->
    <string name="format_ymdhm">%1$d/%2$02d/%3$02d %4$02d:%5$02d</string>
    <string name="format_body_temperature">%1$.1f</string>

    <!-- ファイル名 -->
    <string name="export_file_name_user">user.csv</string>
    <string name="export_file_name_body_temperature">body_temperature.csv</string>

    <!--  ユーザー  -->
    <string name="tell_your_name">あなたの名前を教えて下さい。</string>
    <string name="user_saved">情報が登録されました</string>
    <string name="save_user">この内容で保存する</string>
    <string name="near_user">近くにいるユーザー</string>
    <string name="out_user">外出中のユーザー</string>
    <string name="update_name">名前を更新</string>
    <string name="name_error">名前を入力してください</string>
    <string name="grade">学位</string>
    <string name="import_from_csv">CSVからインポート</string>
    <string name="create_new_user">新規ユーザー登録</string>
    <string name="how_to_add_user">ユーザーの追加方法を選択</string>
    <string name="export_user_data">ユーザーデータを出力</string>

    <!--  体温  -->
    <string name="chooser_title">体温を入力してください</string>
    <string name="saved_body_temperature">体温を保存しました</string>
    <string name="share_file_description">体温のデータを出力</string>
    <string name="body_temperature_input_alert">体温計の通りに入力してください</string>

    <!--  Bluetooth  -->
    <string name="select_your_bluetooth_device">Bluetooth端末を選択</string>
    <string name="select_bluetooth_device_hint">Bluetooth端末を登録することで、あなたを自動的に識別することができます。</string>
    <string name="bluetooth_device">Bluetoothデバイス</string>
    <string name="unnamed_device">無名のデバイス</string>
    <string name="registered_bluetooth_devices">登録済みBluetooth端末</string>
    <string name="add_bluetooth_device">Bluetooth端末を追加</string>
    <string name="select_your_grade">学年を選択してください</string>

    <!--  通知  -->
    <string name="scan_notification_title">周囲の端末をスキャンしています</string>

    <!--  Preferences  -->
    <string name="category_api">api_category</string>
    <string name="key_api_end_point">api_end_point</string>
    <string name="default_api_endpoint">http://192.168.10.7:5000</string>

    <string name="category_google">google_category</string>
    <string name="key_google_calendar_id">google_calendar_id</string>
    <string name="default_calendar_id">@string/calendar_id</string>
    <string name="key_google_spreadsheet_id">google_spreadsheet_id</string>
    <string name="default_spreadsheet_id">@string/spread_sheet_id</string>

    <string name="category_export">export_category</string>
    <string name="key_export_attendance">export_attendance</string>

    <!--  Files  -->
    <string name="service_account">service_account.json</string>
    <string name="spread_sheet_id">1enzg6T1J62uDhKrPDR82dZ6yhRgIDfv9PANUXowIfTw</string>
    <string name="calendar_id">00skbhatat744kdvg0875oi5ic@group.calendar.google.com</string>
    <string name="body_temperature_hint">体温計をスキャンするか、体温を直接入力してください。</string>
</resources>